pkg/lang/syntax/testdata/ub/validate/invalid/factory/depends-on-not-array.ub
factory: {
  imports: { core: 'example.com/core' }
  resources: {
    app: core.thing { @depends-on: resource.db }
  }
}
